--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hapi": "^17.5.1",
     "hapi-swagger": "^9.1.1",
     "inert": "^5.1.0",
+    "joi": "^13.6.0",
     "mongoose": "^5.1.5",
     "nodemon": "^1.17.5",
     "vision": "^5.3.3"
